Prevent both popups from showing up at the same time, fix scrollbar layout fix

--- a/app/assets/stylesheets/partials/_base.less
+++ b/app/assets/stylesheets/partials/_base.less
@@ -17,6 +17,7 @@ body {
     margin-top: 100px;
     padding-bottom: 200px;
     font-size: 18px;
+    overflow-y: scroll;
 }
 
 p {
